--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -9,6 +9,7 @@
     --code-font: "Cascadia Mono", "Fira Code", monospace;
     --border-radius: 4px;
     --content-padding: 1.5rem;
+    --content-margin: 0.5rem;
 }
 
 :root.dark {
